# Dddd

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
config/: default.yaml
src/coding_agent/: __init__.py  main.py
src/coding_agent/agents/: __init__.py  browser_agent.py  code_agent.py  review_agent.py  shell_agent.py  test_agent.py
src/coding_agent/benchmark/: runner.py
src/coding_agent/core/: agent.py  checkpoint.py  config.py  context.py  message.py  tool.py
src/coding_agent/intelligence/: __init__.py  ast_index.py  mentions.py  preprocessor.py  repomap.py  rules.py  semantic_search.py  validator.py
src/coding_agent/models/: provider.py
src/coding_agent/orchestrator/: task_router.py  workflow.py
src/coding_agent/plugins/: mcp.py
src/coding_agent/tools/: browser_ops.py  file_ops.py  info.py  search.py  shell.py
tests/: test_core.py
tests/test_agents/: test_browser_agent.py  test_code_agent.py  test_orchestrator.py
tests/test_core/: __init__.py  test_agent.py
tests/test_intelligence/: test_ast_index.py  test_semantic_search.py
tests/test_orchestrator/: test_task_router.py  test_workflow.py
tests/test_tools/: test_file_ops.py  test_search.py
