[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent"
version = "0.1.0"
description = "Open-source, local-first multi-agent coding platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-languages>=1.10.0",
    "chromadb>=0.5.0",
    "gitpython>=3.1.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "textual>=0.47.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
coding-agent = "coding_agent.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
